--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ paginate        = 10
   subtitle    = "I tinker with code, texts and ideas. Parfois en Français. 🕶"
 
   cover       = "img/config-cover-home.jpeg"
-  description = "Here is a description of your site."
+  description = "Personal web site for Nicolas Morin, a.k.a. @nicomo"
   metaDescription = ""
   googleAnalytics = "UA-108664-17"
   customCSS = []
