--- a/config.toml
+++ b/config.toml
@@ -37,9 +37,14 @@ paginate        = 10
   singleViewStyle = "casper"
 
 [permalinks]
-  post = "/:slug/"
+  post = "blog/:slug/"
 
 [[menu.main]]
   name = "Home"
   url = "/"
   weight = 200
+
+[[menu.main]]
+  name = "Blog"
+  url = "/blog/"
+  weight = 180
