--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/casper-two"]
 	path = themes/casper-two
 	url = https://github.com/nicomo/hugo-casper-two.git
+[submodule "themes/hugo-casper3"]
+	path = themes/hugo-casper3
+	url = https://github.com/jonathanjanssens/hugo-casper3.git
