--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ Title       = "Nicolas Morin (@nicomo)"
   description = "I tinker with code, texts and ideas. Parfois en Français. 🕶"
   metaDescription = ""
   googleAnalytics = "UA-108664-17"
-  customCSS = []
+  customCSS = ["css/nicomo.css"]
   RSSLink = ""
 
   mainSections = ["post"]
