--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ Title = "Nicolas Morin 🕶"
   enableEmoji = "true"
   pygmentsUseClasses = "true"
   mainsections = ["post"]
+  social = "true"
 
 [params.homeInfoParams]
   Title = "👋"
